fix: migrations invalid, fix: documentation invalid, fix: video is no saving in db
