# internal/controllers/authController.go
@@ -19,7 +19,7 @@ type AuthController interface {
 // @Produce 				json
 // @Accept 					json
 // @Param 					user body models.UserLogin{} true "User object containing all user details"
-// @Success 				200 {object} models.UserSwagger{}
+// @Success 				200 {object} map[string]string
 // @Failure 				404 {object} map[string]string
 // @Failure 				500 {object} map[string]string
 // @Router 					/auth/login [post]
@@ -33,14 +33,17 @@ func (controller *AuthControllerImp) Login(c *gin.Context) {
 		return
 	}
 
-	user, err := controller.authService.Login(userLogin.Username, userLogin.Password)
+	token, err := controller.authService.Login(userLogin.Username, userLogin.Password)
 
 	if err != nil {
 		c.JSON(404, gin.H{"error": err.Error()})
 		return
 	}
 
-	c.JSON(200, user)
+	c.JSON(200, gin.H{
+		"token": token,
+		"user": userLogin.Username,
+	})
 }
 
 // Register es el controlador para el endpoint de registro
